# AQI-data-scraper

./: .gitignore  README.md  README.txt  data_scrap.py  location_scrap.py  pyproject.toml
data/: location_info.csv
data/india-aqi/: alipur,-delhi, delhi, india-air-quality.csv  anand-vihar, delhi, delhi, india-air-quality.csv  civil-lines, ajmer, india-air-quality.csv  delhi-institute of tool engineering, wazirpur, delhi, delhi, india-air-quality.csv  dr.-karni singh shooting range, delhi, delhi, india-air-quality.csv  gomti-nagar, lucknow, india-air-quality.csv  lumpyngngad,-shillong, india-air-quality.csv  manali,-chennai, chennai, india-air-quality.csv  mandir-marg, delhi, delhi, india-air-quality.csv  mundka,-delhi, delhi, india-air-quality.csv  new-delhi us embassy, india-air-quality.csv  pgdav-college, sriniwaspuri, delhi, delhi, india-air-quality.csv  r.k.-puram, delhi, delhi, india-air-quality.csv  rabindra-bharati university, kolkata, india-air-quality.csv  shaheed-sukhdev college of business studies, rohini, delhi, delhi, india-air-quality.csv  shastri-nagar, jaipur, india-air-quality.csv
tmp_downloads/: dite-okhla, delhi, delhi, india-air-quality.csv  moti-doongri, alwar, india-air-quality.csv  muradpur,-patna, india-air-quality.csv  panorama,-greece-air-quality.csv  pishva,-pishva, tehran, iran-air-quality.csv  sikulpuikawn,-aizawl, india-air-quality.csv
